# pyPsupertime

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  modules.rst  pypsupertime.rst  requirements.txt
source/: conf.py  index.rst  modules.rst  psupertime.rst
src/psupertime/: model.py  parameter_search.py  plots.py  preprocessing.py  psupertime.py
src/pypsupertime/: model.py  parameter_search.py  plots.py  preprocessing.py  psupertime.py
