[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "psupertime"
version = "0.0.32"
authors = [
  { name="Julian Flesch", email="julian.fleschr@student.uni-tuebingen.de" },
]
description = "Psupertime"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "numpy",
  "matplotlib",
  "seaborn",
  "sklearn",
  "scanpy",
]

[tool.setuptools.package-data]
"mypkg.data"=[]
