[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "pypsupertime"
version = "0.0.105"
authors = [
  { name="Julian Flesch", email="julian.flesch@student.uni-tuebingen.de" },
]
description = "PyPsupertime"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "numpy",
  "matplotlib",
  "seaborn",
  "sklearn",
  "scanpy",
]

[tool.setuptools.package-data]
"mypkg.data"=[]
